--- a/Learnhall/CSS/Parent-reviews.css
+++ b/Learnhall/CSS/Parent-reviews.css
@@ -4,8 +4,35 @@
 }
 .slider .content{
     margin: auto;
+    display: flex;
+    justify-content:left; 
 }
-
+.parent-reviews .text h2{
+    font-family: "adobe-garamond-pro", serif;
+}
+.parent-reviews .text p{
+    margin: auto;
+}
+.slider{
+    margin: auto;
+}
+.slider .parent-mdl{
+    display: flex;
+}
+.slider .stars{
+    display: inline-block;
+    position: relative;
+    background-color: aliceblue;
+    text-align: left;
+    height: max-content;
+}
+.slider .text {
+    height: max-content;
+    display: flex;
+    text-align:left;
+    position:sticky;
+    background-color: aliceblue;
+}
 
 
 
@@ -21,30 +48,51 @@
     }
     .parent-reviews .text h2{
         font-size: 60px;
-        font-family: "adobe-garamond-pro", serif;
     }
     .parent-reviews .text p{
         margin-bottom: 25px;
         font-size: 22px;
         width: 785px;
-        margin: auto;
     }
     .slider{
         width: 1210px;
         height: 300px;
         background-color: aqua;
-        margin: auto;
         margin-top: 60px;
     }
     .slider .content{
         width: 390px;
         height: 300px;
         box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.236);
-        margin-left: 20px;
+        margin-left: 20px; 
     }
     .slider .content:first-child{
         margin-left: 0px;
     }
+    .slider .parent-mdl{
+        width: 77px;
+        height: 77px;
+        margin-left: 32px;
+        margin-top: 32px;
+    }
+    .slider .stars{
+        margin-top: 46px;
+        margin-left: 8px;
+    }
+    .slider .stars h2{
+        font-size: 22px;
+        margin-bottom: 7px;
+    }
+    .slider .text {
+        margin-left: -140px;
+        margin-top: 140px;
+    }
+    .slider .text p{
+        width: 331px;
+        height: 149px;
+        font-size: 20px;
+    }
+   
 }
 
 
