added styling for the phone numbers in the header

--- a/Learnhall/CSS/Header.css
+++ b/Learnhall/CSS/Header.css
@@ -32,6 +32,10 @@ header{
     text-decoration: none;
     color:#070a1396;
 }
+.nav-bar li span a{
+    text-decoration: none;
+    color: #070A13;
+}
 .nav-bar li a:hover { 
     text-decoration: underline;
 }
@@ -227,6 +231,11 @@ header{
         font-size: 20px;
         text-decoration: none;
         color:#070a1396;
+    } 
+    .nav-bar-hamburger-menu .hamburger-menu li span a{
+        font-size: 20px;
+        text-decoration: none;
+        color:#070a13;
     } 
     .nav-bar-hamburger-menu .hamburger-menu li a:hover{
         text-decoration: underline;
