--- a/CSS/Become-tutor.css
+++ b/CSS/Become-tutor.css
@@ -174,6 +174,7 @@
 .become-a-tutor-contact {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 36px 50px;
   background: #ffffff;
   border: 0.5px solid #c6c8cc;
@@ -199,19 +200,58 @@
   font-size: 18px;
   color: #070a13;
   margin-bottom: 45px;
+  text-align: center;
 }
 
-.become-a-tutor-contact a {
-  width: 100%;
-  height: 50px;
-  background: rgba(31, 49, 88, 0.08);
-  border-radius: 5px;
+.become-a-tutor-contact div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img-box {
+  width: 60px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  text-decoration: none;
-  color: #070a13;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+
+.orange {
+  background: #fb8e42;
+}
+
+.blue {
+  background: #233c7e;
+}
+
+.brown {
+  background: #b84b40;
+}
+
+.orange > img {
+  width: 42px;
+  height: 42px;
+}
+
+.blue > img {
+  width: 28.8px;
+  height: 28.8px;
+}
+
+.brown > img {
+  width: 37.82px;
+  height: 23.61px;
+}
+
+.hr {
+  width: 48px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.15);
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .phone-card {
@@ -518,6 +558,46 @@ footer {
     right: 0;
     margin-top: 710px;
   }
+
+  .become-a-tutor-form {
+    margin-top: 20px;
+  }
+
+  .become-a-tutor-container {
+    margin-top: 20px;
+  }
+  .become-a-tutor-contact {
+    display: none;
+  }
+
+  .become-a-tutor-inputs {
+    grid-template-columns: 1fr;
+    /* gap: 28px; */
+  }
+
+  .thank-you-card {
+    padding: 40px 60px;
+  }
+
+  .thank-you-section {
+    width: 349.76px;
+    height: 239px;
+  }
+
+  .thank-you-section img {
+    width: 100px;
+    margin-bottom: 19px;
+  }
+
+  .thank-you-section h3 {
+    font-size: 21px;
+    margin-bottom: 12px;
+  }
+
+  .thank-you-section p {
+    font-size: 12px;
+    width: 231.79px;
+  }
 }
 
 /**********************
@@ -639,5 +719,41 @@ footer {
     height: 75px;
     right: 0;
     margin-top: 375px;
+  }
+
+  .become-a-tutor-container {
+    display: block;
+  }
+  .become-a-tutor-contact {
+    display: none;
+  }
+
+  .become-a-tutor-inputs {
+    grid-template-columns: 1fr;
+    /* gap: 28px; */
+  }
+
+  .thank-you-card {
+    padding: 40px 60px;
+  }
+
+  .thank-you-section {
+    width: 349.76px;
+    height: 239px;
+  }
+
+  .thank-you-section img {
+    width: 100px;
+    margin-bottom: 19px;
+  }
+
+  .thank-you-section h3 {
+    font-size: 21px;
+    margin-bottom: 12px;
+  }
+
+  .thank-you-section p {
+    font-size: 12px;
+    width: 231.79px;
   }
 }
