--- a/CSS/Become-tutor.css
+++ b/CSS/Become-tutor.css
@@ -619,10 +619,36 @@ footer {
 ******* Mobile ********
 **********************/
 @media only screen and (max-width: 576px) {
+  .become-a-tutor-form h2 {
+    font-size: 23px;
+  }
+
+  .become-a-tutor-form p {
+    font-size: 12px;
+  }
+
+  .become-a-tutor-inputs div label,
+  .become-a-tutor-textarea label {
+    font-size: 12px;
+  }
+
+  .become-a-tutor div input,
+  .become-a-tutor-textarea textarea {
+    font-size: 12px;
+  }
+
+  .become-a-tutor-button button {
+    width: 74px;
+    height: 24px;
+    font-size: 11px;
+    border-radius: 3px;
+  }
+
   .become-tutor {
     display: flex;
     justify-content: center;
   }
+
   .become-tutor .img {
     display: flex;
     justify-content: center;
